--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class=" hero-section">
         <div class="container hero-container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="button-hero" type="button">Order Service</button>
+            <button data-modal-open class="button-hero" type="button">Order Service</button>
         </div>
         
       </section>
@@ -369,5 +369,18 @@
     </div>
   </div>
   </footer>
+
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+<button data-modal-close type="button" class="modal-close-button">
+  <svg class="modal-close-btn-icon" width="8px" height="8px">
+    <use href="./img/icons.svg#icon-modal-icon">
+
+    </use>
+  </svg>
+</button>
+    </div>
+  </div>
+  <script src="./js/modal.js"></script>
   </body>
 </html>
