--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,11 @@
            </a>
          </li>
          <li class="list-item" >
-             <a href="">
+             <a class="portfolio-link" href="">
+              <div class="overlay-wrap">
               <img src="./img/img22min.jpg" alt="Cashless Payment" width="296">
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
               <div class="box">
               <h2 class="portfolio-header">Cashless Payment</h2>
              <p class="portfolio-text">Marketing</p>
@@ -67,63 +70,84 @@
              </a>
          </li>
          <li class="list-item" >
-             <a href="">
-             <img src="./img/img33min.jpg" alt="Meditaion App" width="296">
-             <div class="box">
+             <a class="portfolio-link" href="">
+             <div class="overlay-wrap">
+              <img src="./img/img33min.jpg" alt="Meditaion App" width="296">
+             <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+              <div class="box">
              <h2 class="portfolio-header">Meditaion App</h2>
              <p class="portfolio-text">App</p>
              </div> 
             </a>
          </li>
          <li class="list-item" >
-             <a href="">
-             <img src="./img/img44min.jpg" alt="Taxi Service" width="296">
-             <div class="box">
+             <a class="portfolio-link" href="">
+             <div class="overlay-wrap">
+              <img src="./img/img44min.jpg" alt="Taxi Service" width="296">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+              <div class="box">
              <h2 class="portfolio-header">Taxi Service</h2>
              <p class="portfolio-text">Marketing</p>
              </div> 
             </a>
          </li>
          <li class="list-item" >
-             <a href="">
-             <img src="./img/img55min.jpg" alt="Screen Illustrations" width="296">
-             <div class="box">
+             <a class="portfolio-link" href="">
+             <div class="overlay-wrap">
+              <img src="./img/img55min.jpg" alt="Screen Illustrations" width="296">
+             <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+              <div class="box">
              <h2 class="portfolio-header">Screen Illustrations</h2>
              <p class="portfolio-text">Design</p>
              </div> 
             </a>
          </li>
          <li class="list-item" >
-             <a href="">
-             <img src="./img/img66min.jpg" alt="Online Courses" width="296">
-             <div class="box">
+             <a class="portfolio-link" href="">
+             <div class="overlay-wrap">
+              <img src="./img/img66min.jpg" alt="Online Courses" width="296">
+             <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+              <div class="box">
              <h2 class="portfolio-header">Online Courses</h2>
              <p class="portfolio-text">Marketing</p>
              </div> 
             </a>
          </li>
          <li class="list-item" >
-             <a href="">
-             <img src="./img/img77min.jpg" alt="Instagram Stories Concept" width="296">
-             <div class="box">
+             <a class="portfolio-link" href="">
+             <div class="overlay-wrap">
+              <img src="./img/img77min.jpg" alt="Instagram Stories Concept" width="296">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+              <div class="box">
              <h2 class="portfolio-header">Instagram Stories Concept</h2>
              <p class="portfolio-text">Design</p>
              </div> 
             </a>
          </li>
          <li class="list-item" >
-             <a href="">
-             <img src="./img/img88min.jpg" alt="Organic Food" width="296">
-             <div class="box">
+             <a class="portfolio-link" href="">
+             <div class="overlay-wrap">
+              <img src="./img/img88min.jpg" alt="Organic Food" width="296">
+             <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+              <div class="box">
              <h2 class="portfolio-header">Organic Food</h2>
              <p class="portfolio-text">Web Site</p>
              </div> 
             </a>
          </li>
          <li class="list-item" >
-             <a href="">
-             <img src="./img/img99min.jpg" alt="Fresh Coffee" width="296">
-             <div class="box">
+             <a class="portfolio-link" href="">
+             <div class="overlay-wrap">
+              <img src="./img/img99min.jpg" alt="Fresh Coffee" width="296">
+             <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+              <div class="box">
              <h2 class="portfolio-header">Fresh Coffee</h2>
              <p class="portfolio-text">Web Site</p>
              </div> 
