--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <nav class="header-nav">
          <a class="logo" href="./index.html"><span class="logo-first-part">web</span><span class="logo-second-type">studio</span></a>
         <ul class="site-nav list">
-         <li><a class="link" href="./index.html">Studio</a></li>
+         <li><a class="current link" href="./index.html">Studio</a></li>
          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
          <li><a class="link" href="">Contacts</a></li>
         </ul>
